--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -27,8 +27,11 @@ Enum that contains JerryScript API value types:
  - JERRY_TYPE_FUNCTION - function type
  - JERRY_TYPE_ERROR - error/abort type
  - JERRY_TYPE_SYMBOL - symbol type
+ - JERRY_TYPE_BIGINT - bigint type
 
 *New in version 2.0*.
+
+*Changed in [[NEXT_RELEASE]]*: Added `JERRY_TYPE_BIGINT` value.
 
 ## jerry_object_type_t
 
