Add missing version information in API reference document (#4363)
JerryScript-DCO-1.0-Signed-off-by: Peter Gal pgal.usz@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -151,6 +151,8 @@ Possible compile time enabled feature types:
 
 *Changed in version 2.3* : Added `JERRY_FEATURE_WEAKMAP`, `JERRY_FEATURE_WEAKSET` values.
 
++*Changed in [[NEXT_RELEASE]]*: Added `JERRY_FEATURE_BIGINT`, `JERRY_FEATURE_REALM` values.
+
 ## jerry_container_type_t
 
 Container object types:
@@ -5988,6 +5990,8 @@ jerry_create_realm (void);
 ```
 
 - return value - realm object value
+
+*New in version [[NEXT_RELEASE]]*.
 
 **Example**
 
