--- a/docs/01.CONFIGURATION.md
+++ b/docs/01.CONFIGURATION.md
@@ -286,7 +286,7 @@ a set of files into the `gen_src` directory (Note that the command is executed i
 but can be adapted to run outside of the project root dir):
 
 ```sh
-$ python tools/srcgenerator.py --output-dir gen_src --jerry-core --jerry-port-default --jerry-libm
+$ python tools/srcgenerator.py --output-dir gen_src --jerry-core --jerry-port-default --jerry-math
 ```
 
 The command creates the following files in the `gen_src` dir:
@@ -296,7 +296,7 @@ The command creates the following files in the `gen_src` dir:
 * `jerryscript-config.h`
 * `jerryscript-port-default.c`
 * `jerryscript-port-default.h`
-* `jerryscript-libm.c`
+* `jerryscript-math.c`
 * `math.h`
 
 **Important**: the `jerryscript-config.h` contains the configurations mentioned above and
@@ -307,7 +307,7 @@ These files can be directly compiled with an application using the JerryScript A
 For example with the following command:
 
 ```sh
-$ gcc -Wall -o demo_app demo_app.c gen_src/jerryscript.c gen_src/jerryscript-port-default.c jerryscript-libm.c -Igen_src/
+$ gcc -Wall -o demo_app demo_app.c gen_src/jerryscript.c gen_src/jerryscript-port-default.c jerryscript-math.c -Igen_src/
 ```
 
 Please note that the headers must be available on the include path.
