Implement Jerry api get builtin object
JerryScript-DCO-1.0-Signed-off-by: bence gabor kis kisbg@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -33,6 +33,26 @@ Enum that contains JerryScript API value types:
 
 *Changed in [[NEXT_RELEASE]]*: Added `JERRY_TYPE_BIGINT` value.
 
+## jerry_builtins_id_t
+
+*New in version [[NEXT_RELEASE]]*.
+
+Enum that contains JerryScript API builtin types:
+
+ - JERRY_BUILTIN_GENERIC_OBJECT - Object builtin
+ - JERRY_BUILTIN_GENERIC_PROTOTYPE_OBJECT - Object prototype builtin
+ - JERRY_BUILTIN_ARRAY_OBJECT - Array builtin
+ - JERRY_BUILTIN_ARRAY_PROTOTYPE_OBJECT - Array prototype builtin
+ - JERRY_BUILTIN_ERROR_PROTOTYPE_OBJECT - Error prototype builtin
+ - JERRY_BUILTIN_ERROR_OBJECT - Error builtin
+ - JERRY_BUILTIN_REFLECT_OBJECT - Reflect builtin
+ - JERRY_BUILTIN_STRING_OBJECT - String builtin
+ - JERRY_BUILTIN_STRING_PROTOTYPE_OBJECT - String prototype builtin
+ - JERRY_BUILTIN_NUMBER_OBJECT - Number builtin
+ - JERRY_BUILTIN_NUMBER_PROTOTYPE_OBJECT - Number prototype builtin
+ - JERRY_BUILTIN_REGEXP_OBJECT - Regexp builtin
+ - JERRY_BUILTIN_REGEXP_PROTOTYPE_OBJECT - Regexp prototpye builtin
+
 ## jerry_object_type_t
 
 Enum that contains JerryScript **object** value types:
@@ -2377,6 +2397,50 @@ main (void)
 - [jerry_create_container](#jerry_create_container)
 - [jerry_container_type_t](#jerry_container_type_t)
 
+
+*New in version [[NEXT_RELEASE]]*.
+
+## jerry_get_builtin_object
+
+**Summary**
+
+Get the specified built-in object.
+The function always returns with an object, unless the feature required for the built-in object is disabled.
+
+*Note*: Returned value must be freed with [jerry_release_value](#jerry_release_value) when it
+is no longer needed.
+
+**Prototype**
+```c
+jerry_value_t
+jerry_get_builtin_object (uint8_t builtin_id)
+- `builtin_id` - builtin id
+- return value
+  - referenced to specified built-in object
+- Error value if builtin is disabled
+```
+**Example**
+
+[doctest]: # ()
+
+```c
+#include "jerryscript.h"
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+
+  jerry_value_t array_prototype = jerry_get_builtin_object (JERRY_BUILTIN_ARRAY_PROTOTYPE_OBJECT);
+  jerry_release_value (array_prototype);
+  jerry_cleanup ();
+
+  return 0;
+}
+```
+
+**See also**
+
+- [jerry_builtins_id_t](#jerry_builtins_id_t)
 
 ## jerry_value_is_undefined
 
