Fixes dead loop when abort called in Win32/CI
Disable the debug popup on MSVC/win32 by introduce new jerry_port_init function

For not popup dialog when crash happend on MSVC/win32
Closed: #4463

JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -6,6 +6,13 @@ It is questionable whether a library should be able to terminate an application.
 
 ```c
 /**
+ * Init the program
+ */
+void jerry_port_init (void);
+```
+
+```c
+/**
  * Signal the port that jerry experienced a fatal failure from which it cannot
  * recover.
  *
